# sfas

./: LICENSE  OPS.md  README.md  pyproject.toml
src/sfas/: greedy.py
